Cleanup some more warnings in multiplot